Crypsisb4: fixes form-control forumjump

--- a/src/components/com_kunena/template/crypsisb4/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsisb4/assets/less/general.less
@@ -1323,3 +1323,7 @@ form:not(.form-no-margin) .control-group .controls {
     font-size: 2em;
   }
 }
+
+.fbs {
+  width: auto;
+}
